gccida/c0/dump_conflicts
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2388:19: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( reg_renumber[allocno_0[( __int64)*( int *)&allocno_order[4 * i]].reg] < 0 ) 
                  ^~~~~~~~~
                  allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2394:19: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( reg_renumber[allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].reg] < 0 ) 
                  ^~~~~~~~~
                  allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2396:38: error: use of undeclared identifier 'allocno_0'
fprintf( file, " %d", ( unsigned int)allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].reg); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2400:9: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
&& j != allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].reg ) 
        ^~~~~~~~~
        allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2405:6: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].size != 1 ) 
     ^~~~~~~~~
     allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2406:41: error: use of undeclared identifier 'allocno_0'
fprintf( file, " ( %d)", ( unsigned int)allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].size); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2412:51: error: use of undeclared identifier 'allocno_0'
fprintf( file, ";; %d conflicts:", ( unsigned int)allocno_0[( __int64)ib].reg); 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2416:38: error: use of undeclared identifier 'allocno_0'
fprintf( file, " %d", ( unsigned int)allocno_0[( __int64)j_0].reg); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2420:25: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( ( ( 1LL << j_0a) & allocno_0[( __int64)ib].hard_reg_conflicts) != 0 ) 
                        ^~~~~~~~~
                        allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2427:25: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( ( ( 1LL << j_0b) & allocno_0[( __int64)ib].hard_reg_preferences) != 0 ) 
                        ^~~~~~~~~
                        allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2432:53: error: use of undeclared identifier 'allocno_0'
fprintf( file, ";; %d preferences:", ( unsigned int)allocno_0[( __int64)ib].reg); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:2435:25: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( ( ( 1LL << j_0c) & allocno_0[( __int64)ib].hard_reg_preferences) != 0 ) 
                        ^~~~~~~~~
                        allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_conflicts/src/obj/global.o] Error 1
